@@ -1,3 +1,8 @@
+2005-07-27  Jan Beulich  <jbeulich@novell.com>
+
+	* elf64-x86-64.c (R_X86_64_standard, R_X86_64_vt_offset): New.
+	(elf64_x86_64_info_to_howto): Use them.
+
 2005-07-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* elflink.c (_bfd_elf_merge_symbol): Skip weak redefinition
